src/theme.css
/*!
  Horizon

  Original authors & inspiration:
    - lr-tech, Oneline Proton: https://github.com/lr-tech/OnelineProton
    - crambaud, waterfall: https://github.com/crambaud/waterfall

  Check out their awesome work!

  More inspiration: https://firefoxcss-store.github.io/
*/

/*************** Variables and variable overrides ***************/
:root {
  /***** Custom Variables *****/
  /* customizes the browser's line height */
  --custom-line-height: 32px;

  /* url bar width settings */
  --custom-urlbar-width: 380px;

  /* tab width settings */
  --custom-active-tab-width: 185px;
  --custom-inactive-tab-width: 0px; /* this is good to use in conjunction with about:config `browser.tabs.tabMinWidth` */

  /* customize urlbar font size */
  --custom-urlbar-font-size: 1em; /* default: 1.15 */

  /***** Internal FF variables overrides *****/
  /* several height overrides */
  --urlbar-height: var(--custom-line-height) !important;
  --urlbar-toolbar-height: var(--custom-line-height) !important;
  --urlbar-min-height: var(--custom-line-height) !important;
  --tab-min-height: var(--custom-line-height) !important;
  /* removes tabs "pill" margin. */
  --tab-block-margin: 0px !important;
  /* removes rounded borders on various items */
  --tab-border-radius: 0px !important;
  --toolbarbutton-border-radius: 0px !important;
  --urlbar-icon-border-radius: 0px !important;
  /* technically tabs have no shadow now but this also fixes new tab icon height */
  --tabs-navbar-shadow-size: 0px !important;
  /* removes padding next to back button and hamburger menu */
  --toolbar-start-end-padding: 0px !important;
  /* doesn't seem to visually change anything but removes extra unused padding on buttons */
  --toolbarbutton-outer-padding: 0px !important;
  --urlbar-container-padding: 0px !important;
}

/*************** Line Height stuff ***************/
#TabsToolbar,
#TabsToolbar .tab-background,
#TabsToolbar .tab-content,
#nav-bar,
#tabbrowser-tabs,
.toolbarbutton-1:not(.chromeclass-toolbar-additional),
.toolbarbutton-badge-stack,
.urlbar-page-action,
.urlbar-input-box {
  max-height: var(--custom-line-height);
  min-height: var(--custom-line-height);
  height: var(--custom-line-height);
}

#urlbar-container,
#search-container {
  margin-inline: 0 !important;
  padding-inline: 0 !important;
  padding-block: 0 !important;
}

#urlbar {
  /* fixes urlbar being shifted down some, may be unnecessary */
  top: 0px !important;
  /* fixes focusing adding some width */
  width: 100% !important;
}

/* fixes some extra height with oneline height < 32px? */
#titlebar {
  appearance: none !important;
}

/* media query wrapper can be removed if you want one line on all browser widths */
@media (min-width: 850px) {
  #TabsToolbar {
    margin-left: var(--custom-urlbar-width) !important;
  }

  #nav-bar {
    margin-top: calc(var(--custom-line-height) * -1);
    margin-right: calc(100vw - var(--custom-urlbar-width)) !important;
  }

  #urlbar-container {
    min-width: 0px !important;
  }
}

/*************** Hide things ***************/
/* hide tab close button unless hovered */
.tabbrowser-tab .tab-close-button {
  display: none !important;
}
.tabbrowser-tab:hover .tab-close-button {
  display: -moz-inline-box !important;
}

/* hide forward button when not available */
#forward-button[disabled="true"] {
  display: none !important;
}

/* hide Shield Icon */
#tracking-protection-icon-container {
  display: none !important;
}

/*************** Misc. Tab Styling ***************/
/* Adjusts focused and unfocused tab widths */
.tabbrowser-tab[selected] {
  max-width: var(--custom-active-tab-width) !important;
}
.tabbrowser-tab {
  max-width: var(--custom-inactive-tab-width) !important;
  padding-inline: 0px !important; /* removes black space between tabs */
}

/* removes space that is typically to the right of the tabs on the window */
.titlebar-spacer {
  display: none;
}

/* remove tab shadow */
.tab-background {
  box-shadow: none !important;
}

/* remove gap after pinned tabs */
.tabbrowser-tab {
  margin-inline-start: 0 !important;
}

/*************** Misc. URL / Navbar Styling ***************/
/* removes background color from urlbar area */
#nav-bar {
  background: 0 0 !important;
}

/* fixes urlbar shifting slightly when focusing */
#urlbar[breakout][breakout-extend] {
  left: 0px !important;
}

/* changes urlbar / urlbar dropdown font size */
#urlbar,
#searchbar {
  font-size: var(--custom-urlbar-font-size) !important;
}

/* removes blue focus border that appears sometimes on urlbar */
/* also removes box shadow when focused */
#urlbar-background {
  outline: none !important;
  box-shadow: none !important;
}

/* removes some extra pixels of border around url input */
#searchbar,
#urlbar-input-container {
  border: none !important;
}

/* removes border on bookmarks toolbar */
#navigator-toolbox {
  border: none !important;
}

/* fixes focusing causing tiny bookmark thing on smaller line heights */
#urlbar,
#urlbar-input-container,
.urlbarView {
  padding: 0 !important;
  padding-inline: 0 !important;
  padding-block: 0 !important;
}

/* give soem space to the left of the back button on the window */
#back-button {
  margin-left: 5px !important;
}
/* fixes inconsistent widths and paddings on buttons */
.toolbarbutton-badge-stack,
.toolbarbutton-1 > .toolbarbutton-icon,
.urlbar-page-action,
#urlbar-go-button,
.search-go-button {
  padding: var(--toolbarbutton-inner-padding)
    calc(var(--toolbarbutton-inner-padding) / 2) !important; /* normally just toolbar-inner-padding */
}
.toolbarbutton-1 > .toolbarbutton-icon,
.urlbar-page-action,
#urlbar-go-button,
.search-go-button {
  width: calc(var(--toolbarbutton-inner-padding) + 16px) !important;
}
/*************** OS Fixes / Customizations ***************/
/* For macOS */
@media not (-moz-windows-default-theme) {
  /* moves macOS window controls to right */
  .titlebar-buttonbox-container {
    -moz-box-ordinal-group: 1 !important;
    -moz-box-align: center !important;
  }

  /* gives right margin to macOS */
  .titlebar-buttonbox {
    margin-right: 5px !important;
  }
}

@media (-moz-windows-default-theme) {
  /*
    optional - makes browser controls not centered, gives a bit of space to drag the
    browser in case there's a lot of tabs

    if removed, may want to remove vertical padding below.
   */
  .titlebar-buttonbox-container {
    -moz-box-align: baseline !important;
  }

  /* reduces size of window controls and gives a little horizontal padding */
  .titlebar-button {
    padding: calc(var(--custom-line-height) / 8) 7px !important;
  }

  /* fixes weird maximize window */
  #main-window[sizemode="maximized"] #toolbar-menubar {
    height: 8px !important;
  }
}

